targets/kubernetes/scale-agent/proxies/envoy/load_balancer/envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9091
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                common_http_protocol_options:
                  idle_timeout: 0s  # disabled
                  # max_stream_duration: 3600s
                  # max_connection_duration: 3600s
                http2_protocol_options:
                  stream_error_on_invalid_http_messaging: false
                  # connection_keepalive:
                  #   interval: 1s
                  #   timeout: 10s
                stream_idle_timeout: 0s  #must be disabled for long-lived and streaming requests
                request_timeout: 0s  # must be disabled for long-lived and streaming requests
                http_filters:
                  - name: envoy.filters.http.grpc_web
                  - name: envoy.filters.http.router
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: clouddriver-grpc
                            timeout: 0s

  clusters:
    - name: clouddriver-grpc
      connect_timeout: 3600s
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          common_http_protocol_options:
            idle_timeout: 0s
          explicit_http_config:
            http2_protocol_options:
              stream_error_on_invalid_http_messaging: false
              # connection_keepalive:
              #   interval: 10s
              #   timeout: 1000s
      type: STRICT_DNS
      # Comment out the following line to test on v6 networks
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: clouddriver-grpc
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: spin-clouddriver-grpc-headless
                      port_value: 9091
