targets/kubernetes/scale-agent/proxies/envoy/load_balancer/patch-spin-clouddriver-grpc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: armory-agent
    cluster: armory-agent-proxy
  name: spin-clouddriver-grpc
spec:
  selector:
    app: armory-agent
    cluster: armory-agent-proxy
